[gd_scene load_steps=15 format=3 uid="uid://d23d0sdb50mi4"]

[ext_resource type="Script" path="res://Player/Projectiles/tropical_rocket.gd" id="1_6tque"]
[ext_resource type="Shader" path="res://Pickups/rainbow.gdshader" id="1_yg57f"]
[ext_resource type="PackedScene" uid="uid://dv0jq3pemcjyr" path="res://Colliders/hit_box.tscn" id="2_ebcbt"]
[ext_resource type="PackedScene" uid="uid://cs4pdnl4db0o1" path="res://Colliders/hurt_box.tscn" id="3_llb2e"]
[ext_resource type="AudioStream" uid="uid://kl0bd5eg66l0" path="res://Audio/SFXs/Player/appleThrusters.wav" id="5_i4hyj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r0o8b"]
render_priority = 0
shader = ExtResource("1_yg57f")
shader_parameter/alpha = 1.0
shader_parameter/rippliing = false
shader_parameter/using_texture = false
shader_parameter/head_color = Vector3(1, 0.5, 0)
shader_parameter/face_color = Vector3(0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_g1ehb"]
material = SubResource("ShaderMaterial_r0o8b")

[sub_resource type="SphereMesh" id="SphereMesh_yg63y"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hvsfk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1gxrx"]
size = Vector3(1.25903, 1.21167, 1.29663)

[sub_resource type="BoxShape3D" id="BoxShape3D_e5i1n"]
size = Vector3(1.14508, 1.14502, 1.12604)

[sub_resource type="Animation" id="Animation_h3sqw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TropicalMesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_3u6jj"]
resource_name = "spin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TropicalMesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 6.28319)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d5yh4"]
_data = {
"RESET": SubResource("Animation_h3sqw"),
"spin": SubResource("Animation_3u6jj")
}

[node name="TropicalRocket" type="CharacterBody3D"]
transform = Transform3D(0.125, 0, 0, 0, 0.125, 0, 0, 0, 0.125, 0, 0, 0)
collision_layer = 8192
collision_mask = 0
script = ExtResource("1_6tque")
speed = 350
boss_damage = 0.025

[node name="TropicalMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_g1ehb")

[node name="Thruster" type="MeshInstance3D" parent="TropicalMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.412804)
mesh = SubResource("SphereMesh_yg63y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_hvsfk")

[node name="HitBox" parent="." instance=ExtResource("2_ebcbt")]
collision_layer = 2048
collision_mask = 32784

[node name="CollisionShape3D" parent="HitBox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0264893, 0.00305176, -0.00354004)
shape = SubResource("BoxShape3D_1gxrx")

[node name="HurtBox" parent="." instance=ExtResource("3_llb2e")]
collision_layer = 4096
collision_mask = 33

[node name="CollisionShape3D" parent="HurtBox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00180054, 0.017334, 0.00588989)
shape = SubResource("BoxShape3D_e5i1n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d5yh4")
}
autoplay = "spin"

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_i4hyj")
volume_db = -16.0
autoplay = true
bus = &"Sound Effects"

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]

[editable path="HitBox"]
[editable path="HurtBox"]
